--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="apple-mobile-web-app-title" content="">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta content="email=no,telephone=no" name="format-detection">
+    <meta name="full-screen" content="no">
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="x5-fullscreen" content="false">
+    <meta name="360-fullscreen" content="false">
+    <meta http-equiv="Pragma" content="no-cache">
+    <base href="public/">
+    <link href="css/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <div class="menu">
+        <div class="btn">编辑</div>
+        <div class="btn">全部</div>
+        <div class="add">添加习惯</div>
+      </div>
+      <div class="date_switch">
+        <div class="prev">前</div>
+        <div class="cur">当前</div>
+        <div class="next">后</div>
+      </div>
+    </header>
+    <div class="mainctner">
+      <ul>
+        <li class="plan">
+          <p>测试测试3</p>
+          <div class="scale"><i></i><i></i><i></i><i></i></div>
+        </li>
+        <li class="plan">
+          <p>测试测试2</p>
+          <div class="scale"><i></i><i></i><i></i><i></i></div>
+        </li>
+        <li class="plan">
+          <p>测试测试1</p>
+          <div class="scale"><i></i><i></i><i></i><i></i></div>
+        </li>
+      </ul>
+    </div>
+    <footer>
+      <div class="item">签到</div>
+      <div class="item">发现</div>
+      <div class="item">我的</div>
+      <div class="item">更多</div>
+    </footer>
+    <script src="js/zepto.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html>
