--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="360-fullscreen" content="false">
     <meta http-equiv="Pragma" content="no-cache">
     <base href="public/">
+    <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
+    <link rel="apple-touch-icon"  sizes="72x72" href="apple-touch-icon-ipad.png" />
+    <link rel="apple-touch-icon"  sizes="114x114" href="apple-touch-icon-retina.png" />
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
